<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="settings_app_name">Droid Settings</string>
    <string name="launcher_settings_app_name">Droid Settings</string>
    <string name="system_more_setting">More settings</string>
    <string name="system_setting">Settings</string>
    <string name="upgrade_bluetooth_remote">Upgrade bluetoothremote</string>
    <string name="device_display">Display</string>
    <string name="device_outputmode">Screen resolution</string>
    <string name="device_displaymode">Display Mode</string>
    <string name="device_color">Color</string>
    <string name="device_colorattribute">Format and Depth</string>
    <string name="device_outputmode_color_space">Color Space Settings</string>
    <string name="device_outputmode_color_depth">Color Depth Settings</string>
    <string name="device_outputmode_auto">Auto switch to best resolution</string>
    <string name="device_nativeui_enable">System restart required for change to take effect</string>
    <string name="device_nativeui_context">Native ui enable</string>
    <string name="device_dolbyvision_auto">Auto switch to best dolby vision</string>
    <string name="hdr_priority">HDR Priority</string>
    <string name="hdr10">HDR10</string>
    <string name="hdr_priority_change">Confirm change HDR Priority to:</string>
    <string name="hdr_priority_countdown"> seconds later restore old HDR Priority</string>
    <string name="device_outputmode_deepcolor">deep color mode</string>
    <string name="device_hdr_policy">HDR policy</string>
    <string name="device_outputmode_confirm_mode">Confirm turn off deep color mode</string>
    <string name="device_outputmode_confirm_deepcolor">Confirm turn on deep color mode</string>
    <string name="device_outputmode_change">Confirm change to mode:</string>
    <string name="device_outputmode_countdown"> seconds later restore old mode</string>
    <string name="device_position">Screen position</string>
    <string name="device_position_zoomout">Zoom out screen</string>
    <string name="device_position_zoomin">Zoom in screen</string>
    <string name="device_position_description">current scaling is</string>
    <string name="hdr_policy_sink">Always Hdr</string>
    <string name="hdr_policy_source">Adaptive Hdr</string>
    <string name="playback_settings">Playback settings</string>
    <string name="playback_hdmi_selfadaption">HDMI self-adaption</string>
    <string name="playback_hdmi_selfadaption_part">part mode</string>
    <string name="playback_hdmi_selfadaption_total">totle mode</string>
    <string name="playback_hdmi_selfadaption_part_desc">only support 23.976hz,29.97hz,59.94hz self adaption</string>
    <string name="playback_hdmi_selfadaption_total_desc">support all frequencys self adaption</string>
    <string name="power_key_action">Power</string>
    <string name="system_powerkeyaction">Powerkey definition</string>
    <string name="power_key_definition">Power key definition</string>
    <string name="power_key_shutdown">shutdown</string>
    <string name="power_key_suspend">suspend and resume</string>
    <string name="power_on_mode">Poweron Mode</string>
    <string name="power_on">On</string>
    <string name="power_on_standby">Standby</string>
    <string name="power_on_last">Last</string>
    <string name="title_ok">OK</string>
    <string name="title_cancel">Cancel</string>
    <string name="action_on_title">On</string>
    <string name="action_off_title">Off</string>
    <string name="action_on_description">On</string>
    <string name="action_off_description">Off</string>
    <string name="device_hdr">HDR to SDR</string>
    <string name="device_sdr">SDR to HDR</string>
    <string name="dolby_vision">Dolby Vision</string>
    <string name="dolby_vision_set">Dolby Vision Set</string>
    <string name="dolby_vision_tv">TV Dolby Vision</string>
    <string name="dolby_vision_tv_set">TV Dolby Vision Set</string>
    <string name="dolby_vision_default_enable">Dolby vision enable</string>
    <string name="dolby_vision_sink_led">Dolby vision sink-led</string>
    <string name="dolby_vision_low_latency_yuv">Dolby vision source-led</string>
    <string name="dolby_vision_low_latency_rgb">Dolby vision source-led (RGB)</string>
    <string name="dolby_vision_off">Dolby vision disable</string>
    <string name="dolby_vision_graphics_priority">Dolby Vision Graphics Priority</string>
    <string name="graphics_priority">Graphics Priority</string>
    <string name="video_priority">Video Priority</string>
    <string name="captions_display_on">On</string>
    <string name="captions_display_off">Off</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="device_sound">Audio Output</string>
    <string name="audio_mixing">Audio Mixing</string>
    <string name="audio_mixing_summary_on">support 5.1 channels through Dolby Audio playback</string>
    <string name="audio_mixing_summary_off">support 7.1 channels through Dolby Audio playback</string>
    <string name="dolby_audio_processing">Dolby Audio Effect</string>
    <string name="sound_mode">Audio Effect</string>
    <string name="dap_detail">User Control</string>
    <string name="dap_volume_leveler">Volume Leveler</string>
    <string name="dap_dialog_enhancer">Dialog Enhancer</string>
    <string name="dap_surround_boost">Surround Boost</string>
    <string name="dap_geq">Equalizer</string>
    <string name="dap_geq_band1">low frequency</string>
    <string name="dap_geq_band2">low-middle frequency</string>
    <string name="dap_geq_band3">middle frequency</string>
    <string name="dap_geq_band4">high frequency</string>
    <string name="dap_geq_band5">ultra-high frequency</string>
    <string name="arc_latency">HDMI/ARC latency</string>
    <string name="audio_output_latency">Audio Output Latency</string>
    <string name="device_sound_digital">Digital Audio Format</string>
    <string name="device_sound_digital_auto">Auto detection</string>
    <string name="device_sound_digital_auto_off">OFF</string>
    <string name="device_sound_digital_pcm">PCM</string>
    <string name="device_sound_digital_hdmi">HDMI</string>
    <string name="device_sound_digital_spdif">SPDIF</string>
    <string name="device_sound_dts">DTS Sounds</string>
    <string name="device_sound_dts_downmix">DTS Downmix</string>
    <string name="device_sound_dts_downmix_o">Lo/Ro</string>
    <string name="device_sound_dts_downmix_t">Lt/Rt</string>
    <string name="device_sound_dts_drcscale">DTS Drcscale</string>
    <string name="device_sound_dts_sound">Dts sounds</string>
    <string name="device_sound_dts_dialnorm">DTS Dialnorm</string>
    <string name="device_sound_dts_trans">DTS Transcoder</string>
    <string name="device_sound_dts_trans_auto">Auto</string>
    <string name="device_sound_dts_trans_51pcm">5.1 PCM Transcoder</string>
    <string name="device_sound_dts_trans_71pcm">7.1 PCM Transcoder</string>
    <string name="device_sound_dts_mulasset">DTS Mulasset</string>
    <string name="device_sound_dolby">Dolby sounds</string>
    <string name="device_sound_dolby_drcmode">DRC mode</string>
    <string name="device_sound_dolby_drcoff">OFF</string>
    <string name="device_sound_dolby_drcline">LINE</string>
    <string name="device_sound_dolby_drcrf">RF</string>
    <string name="device_sound_ad_surport">"Associate Audio"</string>
    <string name="surround_sound_format_e_ac3_joc">Dolby Atmos in Dolby Digital Plus</string>
    <string name="surround_sound_format_ac3">Dolby Digital</string>
    <string name="surround_sound_format_e_ac3">Dolby Digital Plus</string>
    <string name="surround_sound_format_dts">DTS</string>
    <string name="surround_sound_format_dts_hd">DTS-HD</string>
    <string name="surround_sound_format_aac_lc">AAC</string>
    <string name="surround_sound_format_truehd">Dolby TrueHD</string>
    <string name="surround_sound_format_ac4">Dolby AC-4</string>
    <string name="device_box_audio_lineout">Lineout</string>
    <string name="device_box_audio_hdmi">Hdmi</string>
    <string name="device_tv_audio_speaker">Speaker</string>
    <string name="device_tv_audio_arc">Arc</string>
    <string name="device_audio_spdif">Spdif</string>
    <string name="screen_brightness">Screen brightness</string>
    <string name="screen_rotation">Screen rotation</string>
    <string name="screen_rotation_0">0</string>
    <string name="screen_rotation_90">90</string>
    <string name="screen_rotation_180">180</string>
    <string name="screen_rotation_270">270</string>
    <string name="sync_failed">Sync failed</string>
    <string name="sync_active">Sync active</string>
    <string name="system_cec">HDMI CEC</string>
    <string name="cec_control">CEC Control</string>
    <string name="title_cec_switch">CEC Switch</string>
    <string name="title_cec_one_key_play">One key play</string>
    <string name="title_cec_auto_power_off">Device auto power off</string>
    <string name="title_cec_auto_wake_up">Tv auto power on</string>
    <string name="title_cec_auto_change_language">Auto change language</string>
    <string name="title_cec_device_list">Device Select List</string>
    <string name="title_cec_arc_switch">ARC Switch</string>
    <string name="power_action_suspend">suspend</string>
    <string name="power_action_restart">restart</string>
    <string name="power_action_shutdown">shutdown</string>
    <string name="netflix_esn">Netflix ESN</string>
    <string name="crypt_keeper_encrypt_title">Encrypt MBOX</string>
    <string name="crypt_keeper_settings_title">Encryption</string>
    <string name="crypt_keeper_encrypted_summary">Encrypted</string>
    <string name="enter_password">To start Android, enter your password</string>
    <string name="starting_android">Starting Android\u2026</string>
    <string name="crypt_keeper_switch_input_method">Switch input method</string>
    <string name="cryptkeeper_wrong_password">Wrong Password</string>
    <string name="cryptkeeper_return_to_call">Return to call</string>
    <string name="cryptkeeper_emergency_call">Emergency call</string>
    <string name="crypt_keeper_dialog_need_password_title">No lock screen PIN or password</string>
    <string name="crypt_keeper_button_text">Encrypt Mbox</string>
    <string name="crypt_keeper_low_charge_text">Charge your battery and try again.</string>
    <string name="crypt_keeper_unplugged_text">Plug in your charger and try again.</string>
    <string name="crypt_keeper_dialog_need_password_message">You need to set a lock screen PIN or password before you can start encryption.</string>
    <string name="crypt_keeper_desc">
      You can encrypt your accounts, settings, downloaded apps and their data,
      media, and other files. After you encrypt your tablet, assuming you\u2019ve set up a screen lock
      (that is, a pattern or numeric PIN or password), you\u2019ll need to unlock the screen to decrypt
      the tablet every time you power it on. The only other way to decrypt is to perform a factory
      data reset, erasing all your data.\n\nEncryption takes an hour or more. You must start with
      a charged battery and keep your tablet plugged in throughout the process. If you interrupt it,
      you\u2019ll lose some or all of your data</string>
    <string name="crypt_keeper_confirm_title">Encrypt?</string>
    <string name="crypt_keeper_final_desc">
    The encryption operation is irreversible and if you interrupt it, you\u2019ll lose data.
    Encryption takes an hour or more, during which the tablet will restart several times.
    </string>
    <string name="crypt_keeper_setup_title">Encrypting</string>
    <string name="crypt_keeper_setup_description">Wait while your phone
    is being encrypted. <xliff:g id="percent" example="50">^1</xliff:g>% complete.</string>
    <string name="crypt_keeper_setup_time_remaining">Wait while your phone
    is being encrypted. Time remaining: <xliff:g id="duration" example="1:23">^1</xliff:g></string>
</resources>